    - Bugs fixed
        - Removed debug trace when using the Basic authentication.
        - Fixed generation of the Content-length header in requests 
          when using ranges.
        - Fixed generation of Resource tags in a WADL document 
          according to the 2009 WADL RNC (generate the Parameter 
          elements before the Method ones).
          Reported by Leigh Klotz.

- 1.1.9 (2010-03-30)
    - Bugs fixed
        - Allowed to specify its own user agent.
        - Fixed support of latin1 characters in credentials for 
          the HTTP_BASIC scheme.

- 1.1.8 (2010-01-29)
    - NRE and Extension Enhancements
        - War client now sets the modification date, if available. 
          Suggested by Warren Janssens.
    - Bugs fixed
        - Fixed generation of Atom document.
          Reported by Bedwyr Humphreys.
        - Issue with line breaks that were removed when PUTting 
          a file. Contributed by Daniel Truemper.
        - Precondition check was wrong for 'if-unmodified-since' if
          dates were equals. Reported by Andreas Schneider.
        - WadlApplication wasn't exposing the default route of routers.
          Reported by John Wismar.

- 1.1.7 (2009-11-20)
    - Bugs fixed
        - Some Jetty parameters (maxThreads, etc.) had to be set at the
          connector creation time instead. Now they only need to be set
          at start time. Reported by Avi Flax.
        - Fixed issue with Grizzly Maven artifact ID. 
          Reported by Daniel Peters.
        - Fixed issue with TransformRepresentation which should not use 
          XMLFilter in getSaxSource(). Contributed by Warren Janssens.
        - Fixed bug in hours formatting in text elements of Atom feeds.
          Reported by Moisei Rabinovich.
        - Fixed potential NPE in ContentType.
          Reported by Eugeniy Chemezov. 
        - Fixed bug in engine causing "connectTimeout" property to 
          always be zero, for all connectors. 